--- a/css/main.css
+++ b/css/main.css
@@ -97,21 +97,64 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+html {
+    box-sizing: border-box;
+}
 
 
+header {
+    height: 175px;
+    background-color : red;
+    width: 100%;
+    position: fixed;
+    top: 0;
+}
 
+body {
+    background-color: gold;
+    margin: 0;
+    padding: 0;
+}
 
+.section_principale {
+    width: 100%;
+    height: 100vh;
+    background-color: pink;
+    margin-top: 175px;
+    margin-bottom: 75px;
 
+}
 
+article{
+    width: 75%;
+    height: 100%;
+    color: white;
+    background-color: blue;
+    float: left;
+}
 
+aside{
+    width:25%;
+    height: 100%;
+    background-color: orange;
+    margin-left: 75%;
+    position: fixed;
 
+}
 
+footer {
+    color: white;
+    height: 75px;
+    background-color : gray;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+}
 
-
-
-
-
-
+p {
+    text-align: center;
+    margin: 0;
+}
 
 /* ==========================================================================
    Helper classes
