--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,8 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/* MISE EN PAGE GÉNÉRALE */
+
 html {
     box-sizing: border-box;
 }
@@ -121,7 +123,7 @@ body {
     height: 100vh;
     background-color: pink;
     margin-top: 175px;
-    margin-bottom: 75px;
+    margin-bottom: 60px;
 
 }
 
@@ -136,6 +138,7 @@ article{
 aside{
     width:25%;
     height: 100%;
+    padding-left: 1%;
     background-color: orange;
     margin-left: 75%;
     position: fixed;
@@ -144,7 +147,7 @@ aside{
 
 footer {
     color: white;
-    height: 75px;
+    height: 60px;
     background-color : gray;
     width: 100%;
     position: fixed;
@@ -154,6 +157,45 @@ footer {
 p {
     text-align: center;
     margin: 0;
+}
+
+
+/* MISE EN PAGE SECTION NOUVELLES */
+
+.news_1 {
+    width: 100%;
+    height: 20%;
+    overflow: hidden;
+}
+
+.news_2 {
+    width: 100%;
+    height: 20%;
+}
+
+.news_3 {
+    width: 100%;
+    height: 20%;
+}
+
+.img_news {
+    float:left;
+    width: 30%;
+    height: 80%;
+    margin-right: 2%;
+    display: block;
+}
+
+.news_texte {
+    padding-right: 4%;
+    text-align: left;
+}
+
+.news_texte>span {
+    font-weight: bold;
+    display: block;
+    text-align : left;
+    overflow: hidden;
 }
 
 /* ==========================================================================
